# cimgui

./: CMakeLists.txt
generator/: generatr.bat
generator/output/: cimgui_impl.h
